// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RoutePicker renders a list of routes and presets toggle 1`] = `
<div
  className="c-route-picker u-hideable"
>
  <div
    className="c-route-filter"
  >
    <div
      className="c-route-filter__text"
    >
      <input
        className="c-route-filter__input"
        onChange={[Function]}
        onKeyDown={[Function]}
        placeholder="Search routes"
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    className="c-garage-filter"
  >
    <button
      className="c-garage-filter__show-hide-button"
      onClick={[Function]}
      title="Toggle Garage Filter"
    >
      <div
        className="c-garage-filter__header"
      >
        Filter garages
      </div>
      <div
        className="c-garage-filter__show-hide-icon"
      >
        <span
          dangerouslySetInnerHTML={
            {
              "__html": "<svg/>",
            }
          }
        />
      </div>
    </button>
  </div>
  <div
    className="c-route-picker__routes-container"
  >
    <ul
      className="c-route-picker__route-list"
    >
      <li>
        <button
          className="c-route-picker__route-list-button"
          onClick={[Function]}
          tabIndex={-1}
        >
          71
        </button>
      </li>
      <li>
        <button
          className="c-route-picker__route-list-button"
          onClick={[Function]}
          tabIndex={-1}
        >
          73
        </button>
      </li>
      <li>
        <button
          className="c-route-picker__route-list-button"
          onClick={[Function]}
          tabIndex={-1}
        >
          111
        </button>
      </li>
      <li>
        <button
          className="c-route-picker__route-list-button"
          onClick={[Function]}
          tabIndex={-1}
        >
          SL1
        </button>
      </li>
    </ul>
    <ul
      className="c-route-picker__selected-routes"
    >
      <li>
        <button
          className="c-route-picker__selected-routes-button"
          onClick={[Function]}
          tabIndex={-1}
        >
          28
          <span
            className="c-route-picker__selected-routes-button-icon"
            dangerouslySetInnerHTML={
              {
                "__html": "<svg/>",
              }
            }
          />
        </button>
      </li>
      <li>
        <button
          className="c-route-picker__selected-routes-button"
          onClick={[Function]}
          tabIndex={-1}
        >
          39
          <span
            className="c-route-picker__selected-routes-button-icon"
            dangerouslySetInnerHTML={
              {
                "__html": "<svg/>",
              }
            }
          />
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`RoutePicker renders a loading/empty state 1`] = `
<div
  className="c-route-picker u-hideable"
>
  <div
    className="c-route-filter"
  >
    <div
      className="c-route-filter__text"
    >
      <input
        className="c-route-filter__input"
        onChange={[Function]}
        onKeyDown={[Function]}
        placeholder="Search routes"
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    className="c-garage-filter"
  >
    <button
      className="c-garage-filter__show-hide-button"
      onClick={[Function]}
      title="Toggle Garage Filter"
    >
      <div
        className="c-garage-filter__header"
      >
        Filter garages
      </div>
      <div
        className="c-garage-filter__show-hide-icon"
      >
        <span
          dangerouslySetInnerHTML={
            {
              "__html": "<svg/>",
            }
          }
        />
      </div>
    </button>
  </div>
  <div
    className="c-route-picker__routes-container"
  >
    loading...
    <p>
      Selected routes will show up here…
    </p>
  </div>
</div>
`;
